# tycoon-learning-environment-openttd

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
configs/: firs_basic.toml  firs_steeltown.toml
docker/: README.md
docs/: backend_bridge_plan.md  determinism_contract.md  procedural_benchmarking_v0_4.md  report_v0_1.md  research_core_v0_2.md  researcher_mvp_v0_3.md
examples/: random_gym_rollout.py  train_dqn_macro.py  train_maskable_ppo.py  vector_rollout.py
openttd_bridge/: README.md
openttd_bridge/OpenTTDLEBridge/: info.nut  main.nut
openttd_bridge/OpenTTDLECompany/: info.nut  main.nut
openttd_bridge/OpenTTDLEGameScript/: info.nut  main.nut
scenarios/: firs_benchmarks.json  firs_validity_suite.json  lab_play.json
src/openttd_le/: __init__.py  cli.py  replay.py  replay_render.py
src/openttd_le/adapters/: __init__.py  gymnasium.py
src/openttd_le/agents/: __init__.py  base.py  firs.py  frontier.py  greedy.py  llm.py  random_agent.py
src/openttd_le/backends/: __init__.py  base.py  firs.py  live.py  openttd.py  toy.py  visual.py
src/openttd_le/core/: actions.py  artifacts.py  env.py  logistics.py  observation.py  procedural.py  research.py  scenarios.py  schemas.py  scoring.py  types.py
src/openttd_le/envs/: __init__.py  firs.py
src/openttd_le/research/: __init__.py  api.py  benchmarks.py  core_benchmark.py  dataset.py  determinism.py  gym_baselines.py  reporting.py  reproducibility.py  rl_training.py  scoring.py  validity.py
src/openttd_le/workbooks/: __init__.py  export.py  template.py  xlsx.py
templates/: firs_ops_plan.xlsx
tests/: test_cli.py  test_determinism.py  test_env.py  test_firs_env.py  test_firs_workbooks.py  test_gym_baselines.py  test_gymnasium_adapter.py  test_live.py  test_procedural.py  test_replay_render.py  test_reporting.py  test_reproducibility.py  test_research.py  test_validity.py
