[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openttd-le"
version = "0.4.0"
description = "OpenTTD Learning Environment scaffold for logistics-planning agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "OpenTTD-LE contributors" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
gymnasium = ["gymnasium>=1.0"]
parquet = ["pandas>=2.0", "pyarrow>=15.0"]

[project.scripts]
openttd-le = "openttd_le.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
openttd_le = ["py.typed"]
